# adventofcode

./: .gitignore  Dockerfile  README.md  TODO.md  checker.py  mise.toml
2015/: README.md  makefile  package-lock.json  package.json  tsconfig.json
2016/: Cargo.toml  README.md  makefile
2017/: CMakeLists.txt  README.md  String.cpp  String.h  Task.h  base.cpp  main.cpp  makefile
2017/day01/: README.md  day01.cpp
2017/day02/: README.md  day02.cpp
2017/day03/: README.md  day03.cpp
2017/day04/: README.md  day04.cpp
2017/day05/: README.md  day05.cpp
2017/day06/: README.md  day06.cpp
2017/day07/: README.md  day07.cpp
2017/day08/: README.md  day08.cpp  day08.h
2017/day09/: README.md  day09.cpp
2017/day1/: day1.cpp
2017/day10/: README.md  day10.cpp
2017/day11/: README.md  day11.cpp
2017/day2/: input.txt
2018/: README.md  base.py  main.py  makefile
2019/: .gitignore  Base.java  Makefile  README.md  build.gradle  expected_results.gpg  google_checks.xml  settings.gradle
2020/: README.md  expected_results  expected_results.gpg  go.mod  go.sum  main.go  main_test.go  makefile
2021/: .rubocop.yml  Gemfile  README.md  main.rb  task.rb
2022/: .eslintrc.json  Makefile  README.md  build.gradle  build.zig  build.zig.zon  expected_results.gpg  index.js  input.js  package.json  settings.gradle
2023/: Cargo.toml  README.md  makefile
2023/inputs/: day17_input.txt
2023/src/: lib.rs
2023/src/day01/: README.md  main.rs
2023/src/day02/: README.md  main.rs
2023/src/day03/: README.md  main.rs
2023/src/day04/: README.md  main.rs
2023/src/day05/: README.md  main.rs
2023/src/day06/: README.md  main.rs
2023/src/day07/: README.md  main.rs
2023/src/day08/: README.md  main.rs
2023/src/day09/: README.md  main.rs
2023/src/day10/: README.md  main.rs
2023/src/day11/: README.md  main.rs
2023/src/day12/: README.md  main.rs
2023/src/day13/: README.md  main.rs
2023/src/day14/: README.md  main.rs
2023/src/day15/: README.md  main.rs
2023/src/day16/: README.md  main.rs
2023/src/day17/: README.md  main.rs
2023/src/day18/: README.md  main.rs
2023/src/day19/: README.md  main.rs
2024/: .gitignore  (+7 more)
(+703 files in other folders)
