[package]
rust = "1.74"
name = "aoc2023"
version = "0.1.0"
authors = ["Augusto Cesar <augusto@augustocesar.se>"]
edition = "2018"

[dependencies]
regex = "1"
lazy_static = "1.4.0"

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

#SETUP:target_bin